// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`baseline immutability snapshots LOGS_BASELINE_V1 must never change 1`] = `
{
  "builder": {
    "queryData": [
      {
        "aggregateAttribute": {
          "dataType": "",
          "id": "----",
          "key": "",
          "type": "",
        },
        "aggregateOperator": null,
        "aggregations": [
          {
            "expression": "count() ",
          },
        ],
        "dataSource": "logs",
        "disabled": false,
        "expression": "A",
        "filter": {
          "expression": "",
        },
        "filters": {
          "items": [],
          "op": "AND",
        },
        "functions": [],
        "groupBy": [],
        "having": [],
        "legend": "",
        "limit": null,
        "orderBy": [],
        "queryName": "A",
        "reduceTo": "avg",
        "source": null,
        "spaceAggregation": "sum",
        "stepInterval": null,
        "timeAggregation": "rate",
      },
    ],
    "queryFormulas": [],
    "queryTraceOperator": [],
  },
  "clickhouse_sql": [
    {
      "disabled": false,
      "legend": "",
      "name": "A",
      "query": "",
    },
  ],
  "id": "",
  "promql": [
    {
      "disabled": false,
      "legend": "",
      "name": "A",
      "query": "",
    },
  ],
  "queryType": "builder",
  "unit": "",
}
`;

exports[`baseline immutability snapshots LOGS_BASELINE_V1_V1 must never change 1`] = `
{
  "builder": {
    "queryData": [
      {
        "aggregateAttribute": {
          "dataType": "",
          "id": "----",
          "key": "",
          "type": "",
        },
        "aggregateOperator": null,
        "aggregations": [
          {
            "expression": "count() ",
          },
        ],
        "dataSource": "logs",
        "disabled": false,
        "expression": "A",
        "filter": {
          "expression": "",
        },
        "filters": {
          "items": [],
          "op": "AND",
        },
        "functions": [],
        "groupBy": [],
        "having": [],
        "legend": "",
        "limit": null,
        "orderBy": [],
        "queryName": "A",
        "reduceTo": "avg",
        "source": null,
        "spaceAggregation": "sum",
        "stepInterval": null,
        "timeAggregation": "rate",
      },
    ],
    "queryFormulas": [],
    "queryTraceOperator": [],
  },
  "clickhouse_sql": [
    {
      "disabled": false,
      "legend": "",
      "name": "A",
      "query": "",
    },
  ],
  "id": "",
  "promql": [
    {
      "disabled": false,
      "legend": "",
      "name": "A",
      "query": "",
    },
  ],
  "queryType": "builder",
  "unit": "",
}
`;

exports[`baseline immutability snapshots METRICS_BASELINE_V1 must never change 1`] = `
{
  "builder": {
    "queryData": [
      {
        "aggregateAttribute": {
          "dataType": "",
          "id": "----",
          "key": "",
          "type": "",
        },
        "aggregateOperator": "noop",
        "aggregations": [
          {
            "metricName": "",
            "reduceTo": "avg",
            "spaceAggregation": "sum",
            "temporality": "",
            "timeAggregation": "avg",
          },
        ],
        "dataSource": "metrics",
        "disabled": false,
        "expression": "A",
        "filter": {
          "expression": "",
        },
        "filters": {
          "items": [],
          "op": "AND",
        },
        "functions": [],
        "groupBy": [],
        "having": [],
        "legend": "",
        "limit": null,
        "orderBy": [],
        "queryName": "A",
        "reduceTo": "avg",
        "source": null,
        "spaceAggregation": "sum",
        "stepInterval": null,
        "timeAggregation": "rate",
      },
    ],
    "queryFormulas": [],
    "queryTraceOperator": [],
  },
  "clickhouse_sql": [
    {
      "disabled": false,
      "legend": "",
      "name": "A",
      "query": "",
    },
  ],
  "id": "",
  "promql": [
    {
      "disabled": false,
      "legend": "",
      "name": "A",
      "query": "",
    },
  ],
  "queryType": "builder",
  "unit": "",
}
`;

exports[`baseline immutability snapshots TRACES_BASELINE_V1 must never change 1`] = `
{
  "builder": {
    "queryData": [
      {
        "aggregateAttribute": {
          "dataType": "",
          "id": "----",
          "key": "",
          "type": "",
        },
        "aggregateOperator": null,
        "aggregations": [
          {
            "expression": "count() ",
          },
        ],
        "dataSource": "traces",
        "disabled": false,
        "expression": "A",
        "filter": {
          "expression": "",
        },
        "filters": {
          "items": [],
          "op": "AND",
        },
        "functions": [],
        "groupBy": [],
        "having": [],
        "legend": "",
        "limit": null,
        "orderBy": [],
        "queryName": "A",
        "reduceTo": "avg",
        "source": null,
        "spaceAggregation": "sum",
        "stepInterval": null,
        "timeAggregation": "rate",
      },
    ],
    "queryFormulas": [],
    "queryTraceOperator": [],
  },
  "clickhouse_sql": [
    {
      "disabled": false,
      "legend": "",
      "name": "A",
      "query": "",
    },
  ],
  "id": "",
  "promql": [
    {
      "disabled": false,
      "legend": "",
      "name": "A",
      "query": "",
    },
  ],
  "queryType": "builder",
  "unit": "",
}
`;
